--- a/index.html
+++ b/index.html
@@ -13,3 +13,19 @@
 <img src="https://images.vexels.com/media/users/3/324891/isolated/preview/2804edcc050dedbb7eb9a9a74b3f5429-doces-lisos-do-bolo-de-chocolate.png"
 </body>
 </html>
+<liMassa
+ovo
+4 ovos
+chocolate em pó
+4 colheres (sopa) de chocolate em pó
+manteiga
+2 colheres (sopa) de manteiga
+farinha de trigo
+3 xícaras (chá) de farinha de trigo
+açúcar
+2 xícaras (chá) de açúcar
+fermento em pó químico
+2 colheres (sopa) de fermento
+leite
+1 xícara (chá) de leite
+Calda></liMassa>
